# adventofcode2022

./: adventofcode.cabal  adventofcode1  adventofcodeapp.hp
app/: Main.hs
input/: day19debut.json  day20debug.json  day20debut1.json  day22.txt  day22.wrap1.json  day22.wrap2.json
src/: AdventOfCode.hs
src/AdventOfCode/: Array.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Tests.hs
