cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hacke Wayne
maintainer:         hacklew@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        AdventOfCode
        AdventOfCode.Day1
        AdventOfCode.Day2
        AdventOfCode.Day3
        AdventOfCode.Day4
        AdventOfCode.Day5

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0,
        parsec,
        containers,
        either,
        ilist
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcode
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        adventofcode

    hs-source-dirs:   app
    default-language: Haskell2010
