cabal-version:      2.4
name:               adventofcode
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Hacke Wayne
maintainer:         hacklew@hotmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  
        AdventOfCode
        AdventOfCode.Day1
        AdventOfCode.Day2
        AdventOfCode.Day3
        AdventOfCode.Day4
        AdventOfCode.Day5
        AdventOfCode.Day6
        AdventOfCode.Day7
        AdventOfCode.Day8
        AdventOfCode.Day9
        AdventOfCode.Day10
        AdventOfCode.Day11
        AdventOfCode.Day12
        AdventOfCode.Day13
        AdventOfCode.Day14
        AdventOfCode.Day15
        AdventOfCode.Day16
        AdventOfCode.Day17
        AdventOfCode.Day19
        AdventOfCode.Day20
        AdventOfCode.Day21
        AdventOfCode.Day22
        AdventOfCode.Day23

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.3.0
        , parsec
        , containers
        , either
        , ilist
        , vector
        , comonad
        , matrix
        , transformers
        , data-ordlist
        , parallel
        , lens
        , pqueue
        , HUnit
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventofcodeapp
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        adventofcode,
        pqueue,
        containers

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

Test-Suite adventofcode-testsuite
    type: exitcode-stdio-1.0
    main-is: Tests.hs
    default-language: Haskell2010
    hs-source-dirs: src/AdventOfCode
    build-depends:        
        base, 
        QuickCheck, 
        HUnit,
        adventofcode